--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.10",
+    "excel4node": "^1.7.2",
     "file-saver": "^2.0.5",
     "moment-jalaali": "^0.9.2",
     "prompt-sync": "^4.2.0",
